--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ a {
     cursor: pointer;
 }
 
+.btn:hover {
+    opacity: 0.8;
+}
+
 /* header */
 
 .header {
@@ -380,4 +384,256 @@ a {
     font-size: 1.6rem;
     line-height: 1.69;
     color: #9da6a5;
+}
+
+/* popular */
+.popular .sub-title {
+    display: block;
+    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    color: #767e7e;
+    margin-bottom: 18px;
+}
+
+.popular .sub-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 19px;
+}
+
+.popular .sub-heading .desc {
+    width: 525px;
+    font-size: 1.8rem;
+    line-height: 1.78;
+    color: #767e7e;
+}
+
+.popular .sub-heading .cta {
+    font-size: 1.4rem;
+    line-height: 1.5;
+    text-decoration-line: underline;
+    color: #1ebfc1;
+}
+
+.popular .list {
+    margin-top: 80px;
+    display: flex;
+    gap: 47px;
+}
+
+.popular .item {
+    width: 33%;
+    position: relative;
+}
+
+.popular .item .img-courses {
+    object-fit: cover;
+    width: 359px;
+    height: 393px;
+    background: #d0efed;
+    opacity: 0.5;
+    border-radius: 8px;
+}
+
+.popular .item .info-courses {
+    position: absolute;
+    left: 17px;
+    top: 322px;
+    width: 325px;
+    padding: 18px 25px 29px;
+    background: #ffffff;
+    box-shadow: 0px 16px 90px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+}
+
+.popular .item .title {
+    font-weight: 700;
+    font-size: 2.2rem;
+    line-height: 1.5;
+    color: #0d1111;
+}
+
+.popular .item .price {
+    margin-top: 16px;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: #767e7e;
+}
+
+.popular .item .price strong {
+    font-weight: 700;
+    font-size: 2.2rem;
+    line-height: 1.55;
+    color: #0d1111;
+}
+
+.popular .item .desc {
+    margin-top: 6px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.5;
+    color: #9da6a5;
+}
+
+.popular .item .info {
+    margin-top: 18px;
+    display: flex;
+}
+
+.popular .item .info p {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.5;
+    color: #9da6a5;
+    margin-right: 26px;
+}
+
+/* stats */
+.stats .body {
+    margin-top: 390px;
+    width: 862px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.stats .row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.stats .column .data {
+    font-weight: 700;
+    font-size: 6.2rem;
+    line-height: 1.5;
+    text-align: center;
+    color: #0d1111;
+}
+
+.stats .column .desc {
+    margin-top: 11px;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    text-align: center;
+    color: #767e7e;
+}
+
+/* feedback */
+.feedback {
+    padding-top: 264px;
+}
+
+.feedback .body {
+    display: flex;
+    position: relative;
+}
+
+.feedback .info-block {
+    margin: 37px 0;
+    width: 36%;
+}
+
+.feedback .info-block blockquote {
+    margin-top: 27px;
+    font-size: 3.2rem;
+    line-height: 1.5;
+    color: #5d6564;
+}
+
+.feedback .info-block .author {
+    margin-left: 13px;
+    position: relative;
+    margin-top: 33px;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: #767e7e;
+}
+
+.feedback .info-block .author::before {
+    position: absolute;
+    content: "";
+    left: -13px;
+    top: 11px;
+    display: inline-block;
+    width: 8px;
+    height: 2px;
+    background-color: #070707;
+}
+
+.feedback .info-block .author strong {
+    font-weight: 600;
+    color: #070707;
+}
+
+.feedback .info-block .control-group {
+    margin-top: 52px;
+    display: flex;
+    gap: 30px;
+}
+
+.feedback .info-block .control-group .btn-control {
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #2ac9bf;
+    cursor: pointer;
+}
+
+.btn-control:hover {
+    opacity: 0.8;
+}
+
+.feedback .avt-group {
+    width: 64%;
+}
+
+.feedback .avt-group .avt {
+    width: 78px;
+    height: 78px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.feedback .body .avt:first-child {
+    position: absolute;
+    top: 107px;
+    left: 764px;
+    width: 235px;
+    height: 235px;
+}
+
+.feedback .body .avt:nth-child(2) {
+    position: absolute;
+    left: 635px;
+    top: 0;
+    width: 92px;
+    height: 92px;
+}
+
+.feedback .body .avt:nth-child(3) {
+    position: absolute;
+    right: 0;
+    top: 19px;
+    width: 110px;
+    height: 110px;
+}
+
+.feedback .body .avt:nth-child(4) {
+    position: absolute;
+    left: 491px;
+    top: 258px;
+}
+
+.feedback .body .avt:nth-child(5) {
+    position: absolute;
+    left: 703px;
+    bottom: 0;
+}
+
+.feedback .body .avt:last-child {
+    position: absolute;
+    bottom: 29px;
+    right: 32px;
 }
