--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,7 +521,7 @@ a {
 
 /* feedback */
 .feedback {
-    padding-top: 264px;
+    padding: 264px 0 130px;
 }
 
 .feedback .body {
@@ -636,4 +636,85 @@ a {
     position: absolute;
     bottom: 29px;
     right: 32px;
+}
+
+/* contact */
+.contact {
+    padding: 76px 0 88px;
+    background: #def6f5;
+}
+
+.contact .row {
+    display: flex;
+    align-items: center;
+}
+
+.contact .desc {
+    margin-top: 18px;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    color: #767e7e;
+}
+
+.contact .btn {
+    margin-left: 410px;
+}
+
+/* footer */
+.footer {
+    padding: 131px 0 50px;
+}
+
+.footer .row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .title {
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    color: #2e2e2e;
+}
+
+.footer .list {
+    margin-top: 25px;
+}
+
+.footer .column:last-child .list {
+    margin-top: 18px;
+}
+
+.footer .list a {
+    display: flex;
+    margin-bottom: 18px;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: #535353;
+}
+
+.footer .list a:hover {
+    text-decoration: underline;
+}
+
+.footer .list .social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.footer .list span {
+    margin-left: 9px;
+}
+
+.copyright {
+    text-align: center;
+    margin-top: 80px;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    color: #b0b5b4;
 }
